Got the php server working.
I have now started using apache to run the server. I don't wholly understand the Apache part yet but I've got it mapping the port to my localhost, and sending http requests to my php file, so that's some progress.
Here is the link the blog I got the apache docker setup from: https://writing.pupius.co.uk/apache-and-php-on-docker-44faef716150

I'm currently working on being able to access the components of a POST request in php

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3.7"
 services:
-  php:
+  php-apache:
     build: .
+    logging:
+      driver: "json-file"
     ports:
-      - 8080:3971
+      - 8040:80
+    links:
+      - redis
+  redis:
+    image: redis
+    expose:
+      - 6379
