Got Go to pull from Redis
Got a Go app from Redis using this tutorial:
https://tutorialedge.net/golang/go-redis-tutorial/

The data coming through is serialized postback object though, which means I'll have to use a regex to undo it. This doesn't sound ideal so I'm gonna look for an alternative method.

--- a/go-app/Dockerfile
+++ b/go-app/Dockerfile
@@ -1,7 +1,12 @@
 FROM golang:alpine
+
 RUN mkdir /app
 ADD . /app/
 WORKDIR /app
-RUN go build -o main .
 
-CMD ["go","run","test.go"]
+RUN \
+       apk add --no-cache bash git openssh && \
+       go get -u github.com/go-redis/redis && \
+       go build -o main .
+
+CMD ["go","run","httpSender.go"]
