--- a/go-app/Dockerfile
+++ b/go-app/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 RUN \
        apk add --no-cache bash git openssh && \
-       go get -u github.com/go-redis/redis && \
+       go get -u github.com/gomodule/redigo/redis && \
        go build -o main .
 
 CMD ["go","run","httpSender.go"]
