Added some basic logging to the httpRequests
Using go-httpstat I was able to add some basic logging for the delivery/response times, status code, and response body.

--- a/go-app/Dockerfile
+++ b/go-app/Dockerfile
@@ -6,7 +6,8 @@ WORKDIR /app
 
 RUN \
        apk add --no-cache bash git openssh && \
-       go get -u github.com/gomodule/redigo/redis && \
+       go get github.com/tcnksm/go-httpstat && \
+       go get github.com/gomodule/redigo/redis && \
        go build -o main .
 
 CMD ["go","run","httpSender.go"]
