Bug fixing and added restarts
There was a bug with invalid data entries in a Postback object. It was improperly checking if the key and value were valid.

I also added the line 'restart: always' to each container to ensure they keep running.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,18 @@ services:
     build: .
     logging:
       driver: "json-file"
+    restart: always
     ports:
       - 8040:80
     links:
       - redis
   redis:
     image: redis
+    restart: always
     expose:
       - 6379
   golang:
     build: ./go-app
+    restart: always
     links:
       - redis
